--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <script src="js/app.js"></script>
+    <ul>
+        <li><a href="index.html"></a>Home</li>
+        <li><a href="sales.html">Sales-report</a></li>
+    </ul>
+    <header>
+        <h1>COOKIE SALMON</h1>
+        <img src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_4:3/k%2Farchive%2F33717f2e90894a4c4822d44a2c9cc6ea773550b3"
+            alt="" srcset="">
+    </header>
+
+
+    <footer>
+        <h3>All Rights Reserved © 2021</h3>
+        <h3>Designed By Sameh Al-Masri</h3>
+        <a href="">
+            <h3>Contact Us</h3>
+        </a>
+    </footer>
 </body>
+
 </html>
