--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sales.html">Sales-report</a></li>
+    </ul>
     <header>
         <h1>COOKIE SALMON</h1>
         <img src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_4:3/k%2Farchive%2F33717f2e90894a4c4822d44a2c9cc6ea773550b3" alt="" srcset="">
@@ -18,6 +22,7 @@
         <article id="paris"></article>
         <article id="lima"></article>
     </div>
+ 
     <footer>
         <h3>All Rights Reserved © 2021</h3>
         <h3>Designed By Sameh Al-Masri</h3>
