--- a/index.html
+++ b/index.html
@@ -2,29 +2,77 @@
 <html lang="en">
 
 <head>
-
-    <title>Document</title>
+    <meta name="Salmon Cookies"
+        content=" a coffee-time Salmon Cookies made into the shape of a salmon that has just a hint of fishy goodness" />
+    <title>Salmon Cookies - Home Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html"></a>Home</li>
-        <li><a href="sales.html">Sales-report</a></li>
-    </ul>
     <header>
-        <h1>COOKIE SALMON</h1>
-        <img src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_4:3/k%2Farchive%2F33717f2e90894a4c4822d44a2c9cc6ea773550b3"
-            alt="" srcset="">
+
+        <img class="logo" src="img/salmon logo.png" alt="">
+        <div class="topnav">
+            <a class="active" href="index.html">Home Page</a>
+            <a href="sales.html">Sale Data</a>
+        </div>
     </header>
+    <main>
+        <div class="websiteEnter">
+            <ul>
+                <li>Salmon Cookies even Better than home made</li>
+                <li> <img src="img/salmon logo.png" /></li>
+            </ul>
+            <p> The best cookie you could ever taste</p>
+        </div>
+        <div class="row2">
+            <div class="stylingrow2">
+                <div>
+                    <img src="img/family.jpg" />
+                </div>
+                <div class="row3">
+                    <div class="recipe">
+                        <img src="img/frosted-cookie-removebg-preview.png">
+                        <h3 class="cookieName">Salmon Chocolate Chip Cookies</h3>
+                        <p class="cookieRecipe">In a large bowl, beat butter and sugars until blended. Beat in eggs and vanilla. In a small
+                            bowl, whisk
+                            flour, baking soda and salt; gradually beat into butter mixture. Stir in chocolate chips and
+                            walnuts.</p>
+                    </div>
+
+                    <div class="recipe">
+                        <img src="img/fish-removebg-preview.png">
+                        <h3 class="cookieName">The Best Sugar Fish Cookies</h3>
+                        <p class="cookieRecipe">Soft, thick centers with slightly crisp edges,Irresistible buttery vanilla flavor and Stay soft for days.</p>
+                    </div>
+
+                    <div class="recipe">
+                        <img src="img/chinook-removebg-preview.png">
+                        <h3 class="cookieName">Ultimate Chocolate Fish Cookies</h3>
+                        <p class="cookieRecipe">We named this recipe “Ultimate Chocolate Fish Cookies,” because it’s got everything a cookie connoisseur could possibly ask for.
+                            With a texture that is slightly crispy on the outside and chewy on the inside.</p>
+                    </div>
+                </div>
 
 
+
+    </main>
+    <br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br>
     <footer>
-        <h3>All Rights Reserved © 2021</h3>
-        <h3>Designed By Sameh Al-Masri</h3>
-        <a href="">
-            <h3>Contact Us</h3>
-        </a>
+        <div class="row5">
+            <div class="footerStyling">
+                <div class="first">
+                    <p>All Rights Reserved 2021&copyright;</p>
+                    <p>Designed By Sameh Al-Masri</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
