--- a/sales.html
+++ b/sales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sale.css">
 </head>
 <body>
     <ul>
@@ -13,7 +13,6 @@
     </ul>
     <header>
         <h1>COOKIE SALMON</h1>
-        <img src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_4:3/k%2Farchive%2F33717f2e90894a4c4822d44a2c9cc6ea773550b3" alt="" srcset="">
     </header>
     <div id="main">
         <article id="seattle"></article>
