--- a/sales.html
+++ b/sales.html
@@ -1,20 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/sale.css">
+
+  <head>
+    <meta name="Salmon Cookies"
+        content=" a coffee-time Salmon Cookies made into the shape of a salmon that has just a hint of fishy goodness" />
+    <title>Salmon Cookies - Sale Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
+
 <body>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="sales.html">Sales-report</a></li>
-    </ul>
-    <header>
-        <h1>COOKIE SALMON</h1>
-    </header>
-    <div id="main">
+  <header>
+
+    <img class="logo" src="img/salmon logo.png" alt="">
+    <div class="topnav">
+        <a class="active" href="index.html">Home Page</a>
+        <a href="sales.html">Sale Data</a>
+    </div>
+</header>
+    <form id="eventid">
+        <fieldset>
+          <label for="locationNameid">
+            Location Name:
+          </label>
+          <br>
+          <input name="locationNamename" id="locationNameid" type="text" placeholder="add Location Name here" required>
+          <br>
+          <label for="MinCustomerid">
+            Minimom Customers Per Hour:
+          </label>
+          <br>
+          <input name="minCustomerName" id="MinCustomerid" type="number" placeholder="minimun number of your customers"
+            required min="1" max="900">
+          <br>
+          <label for="MaxCustomerid">
+            Maximom Customers Per Hour:
+          </label>
+          <br>
+          <input name="maxCustomerName" id="maxCustomerid" type="number" placeholder="maximun number of your customers"
+            required min="10" max="1000">
+          <br>
+          <label for="AvgCookiesid">
+            Average Cookies Per Hour:
+          </label>
+          <br>
+          <input name="AvrCookiesidName" id="AvgCookiesid" type="number" placeholder="Average cookies sole per hour"
+            required min="1" max="10000">
+          <br>
+    
+          <input name="submitBotton" type="submit" value=" Click Here to Add !">
+        </fieldset>
+        <main class="myfontsize">
+            <h2>Cookies Sold</h2>
+            <div id="TableOfData">
+            </div>
+            <div id="Tokyo">
+            </div>
+            <div id="Dubai">
+            </div>
+            <div id="Paris">
+            </div>
+            <div id="Lima">
+            </div>
+          </main>
+      </form>
+    <div class="myfontsize">
         <article id="seattle"></article>
         <article id="tokyo"></article>
         <article id="dubai"></article>
@@ -23,10 +73,15 @@
     </div>
  
     <footer>
-        <h3>All Rights Reserved © 2021</h3>
-        <h3>Designed By Sameh Al-Masri</h3>
-        <a href=""><h3>Contact Us</h3></a>
-    </footer>
+      <div class="row5">
+          <div class="footerStyling">
+              <div class="first">
+                  <p>All Rights Reserved 2021&copyright;</p>
+                  <p>Designed By Sameh Al-Masri</p>
+              </div>
+          </div>
+      </div>
+  </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
