--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="Salmon Cookies"
         content=" a coffee-time Salmon Cookies made into the shape of a salmon that has just a hint of fishy goodness" />
     <title>Salmon Cookies - Home Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
