--- a/index.html
+++ b/index.html
@@ -28,11 +28,49 @@
             </ul>
             <p> The best cookie you could ever taste</p>
         </div>
-        <div class="row2">
+        <div class="row1">
             <div class="stylingrow2">
                 <div>
                     <img src="img/family.jpg" />
                 </div>
+                <div class="row2">
+                    <h1>You are welcome to visit us from 6:00am until 7:00pm</h1>
+                    <h2>Order your Cookies Now From Our Branches In</h2>
+                    <table class="HomePage">
+                      <tr>
+                        <th>Location:</th>
+                        <th>Address</th>
+                      </tr>
+                      <tr>
+                        <th>Seattle:</th>
+                        <th>
+                          <address>Alaskan Way, Seattle</address>
+                        </th>
+                      </tr>
+                      <tr>
+                        <th>Dubai:</th>
+                        <th>
+                          <address>Sheikh Mohammed Bin Zayed Rd, Dubai</address>
+                        </th>
+                      </tr>
+                      <tr>
+                        <th>Paris:</th>
+                        <th>
+                          <address>67  Place de la Madeleine, Paris</address>
+                        </th>
+                      </tr>
+                      <tr>
+                        <th>Lima:</th>
+                        <th> Avenida Iquitos, Lima 187</th>
+                      </tr>
+                      <tr>
+                        <th>Tokyo:</th>
+                        <th>
+                          <address>19-3, Chidori 3-chome, Ohta-ku, Tokyo</address>
+                        </th>
+                      </tr>
+                    </table>
+                  </div>
                 <div class="row3">
                     <div class="recipe">
                         <img src="img/frosted-cookie-removebg-preview.png">
